[gd_scene load_steps=2 format=3 uid="uid://c1xrg5l4oywfq"]

[ext_resource type="Script" path="res://Scripts/UI/CombatantCard.gd" id="1_jlryx"]

[node name="CombatantCard" type="PanelContainer"]
custom_minimum_size = Vector2(150, 200)
script = ExtResource("1_jlryx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Combatant Name"
horizontal_alignment = 1

[node name="Portrait" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="HpBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
max_value = 1.0
value = 0.75
show_percentage = false

[node name="HpLabel" type="Label" parent="VBoxContainer/HpBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "75/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MpBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
max_value = 1.0
value = 0.5
show_percentage = false

[node name="MpLabel" type="Label" parent="VBoxContainer/MpBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "25/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
